[gd_scene load_steps=2 format=3 uid="uid://bydn58dys58vd"]

[ext_resource type="Script" path="res://menu.gd" id="1_cy63p"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cy63p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Brightness"

[node name="Brightness" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 3.0
tick_count = 4

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Speed
"

[node name="Speed" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 2.0
tick_count = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mode"

[node name="Mode" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Static"
popup/item_1/text = "Breathing"
popup/item_1/id = 1
popup/item_2/text = "Color Cycle"
popup/item_2/id = 2
popup/item_3/text = "Strobing"
popup/item_3/id = 3

[node name="cont" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="boot" type="CheckButton" parent="MarginContainer/VBoxContainer/cont"]
layout_mode = 2
text = "boot"

[node name="awake" type="CheckButton" parent="MarginContainer/VBoxContainer/cont"]
layout_mode = 2
text = "awake"

[node name="sleep" type="CheckButton" parent="MarginContainer/VBoxContainer/cont"]
layout_mode = 2
text = "sleep"

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
color = Color(0.728822, 0.728822, 0.728822, 1)
edit_alpha = false
picker_shape = 3

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Brightness" to="." method="_on_brightness_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Speed" to="." method="_on_speed_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Mode" to="." method="_on_mode_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/cont/boot" to="." method="_on_boot_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/cont/awake" to="." method="_on_awake_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/cont/sleep" to="." method="_on_sleep_toggled"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="preset_added" from="MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_preset_added"]
